added kiosk to payment